[project]
name = "quiz-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "Mackaber",email = "mkbravo555@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "python-docx>=1.1.2",
    "streamlit>=1.45.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
